# Fotoleine

./: .gitmodules  Cargo.toml  license.md  readme.md  todo.txt
resources/: Icon.afphoto
src/: image.rs  image_display.rs  loaded_dir.rs  main.rs  support.rs  worker_pool.rs
src/image_handling/: loaded_dir.rs  loader_pool.rs  mod.rs
src/support/: mod.rs
