[package]
name = "fotoleine"
version = "1.0.0"
authors = ["Tilman Schmidt <AccessKeymaster@gmx.net>"]
edition = "2018"
description = "Custom Image Viewer"

[package.metadata.bundle]
name = "Fotoleine"
identifier = "com.keymaster.fotoleine"
version = "1.0.0"
icon = ["resources/Icon.appiconset/Icon_512@2x.png", "resources/Icon.appiconset/Icon_512.png"]
copyright = "Copyright (c) 2019 Tilman Schmidt. MIT License."
category = "public.app-category.photography"

[dependencies]
glium = { version = "0.26.0-alpha", default-features = true, path="deps/glium" }
imgui = { version = "0.1.0-pre-glutin", path = "deps/imgui-rs" }
imgui-glium-renderer = { version = "0.1.0-pre-glutin", path = "deps/imgui-rs/imgui-glium-renderer" }
imgui-winit-support = { version = "0.1.0-pre-glutin", path = "deps/imgui-rs/imgui-winit-support" }
stb_image = "0.2"
kamadak-exif = "0.3"
serde_yaml = "0.8"
serde = "1.0"
tempfile = "3.1"

