[package]
name = "fotoleine"
version = "1.0.0"
authors = ["Tilman Schmidt <AccessKeymaster@gmx.net>"]
edition = "2018"
description = "Custom Image Viewer"

[package.metadata.bundle]
name = "Fotoleine"
identifier = "com.keymaster.fotoleine"
version = "1.0.0"
icon = ["resources/Icon.appiconset/Icon_512@2x.png", "resources/Icon.appiconset/Icon_512.png"]
copyright = "Copyright (c) 2019 Tilman Schmidt. MIT License."
category = "public.app-category.photography"

[dependencies]
glium = "0.32.1"
imgui = "0.9.0"
imgui-glium-renderer = "0.9.0"
imgui-winit-support = "0.9.0"
stb_image = "0.2"
kamadak-exif = "0.3"
serde_yaml = "0.8"
serde = "1.0"
tempfile = "3.1"

